--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -19,6 +19,11 @@
 @import "cmps/social";
 @import "cmps/mail";
 @import "cmps/about";
+@import "cmps/image";
+@import "cmps/skills";
+@import "cmps/work";
+@import "cmps/contact";
+@import "cmps/footer";
 
 // Pages
 @import "pages/home";
