--- a/src/styles/basics/_buttons.scss
+++ b/src/styles/basics/_buttons.scss
@@ -7,6 +7,7 @@
     font-size: 0.8rem;
     outline: none;
     transition: all ease-out .7s;
+    outline: none;
 
     &:hover {
         color: $clr3;
@@ -22,10 +23,13 @@
     cursor: pointer;
     font-family: roboto-mono;
     transition: all ease-in-out .2s;
+    outline: none;
 
     &:hover {
         background-color: transparentize($clr3, 0.9);
+        @include hover-supported
     }
+    
 
     .landing & {
         padding: 17px;
