--- a/src/styles/cmps/_about.scss
+++ b/src/styles/cmps/_about.scss
@@ -1,10 +1,11 @@
 .about {
     
-    height: 100vw;
+    
     margin-top: 25vh;
     width: 100%;
     padding: 150px 100px 0 100px ;
     text-align: inline-start;
+    position: relative;
 
     span {
         font-family: roboto-mono;
@@ -16,15 +17,27 @@
         &::after {
         content: "";
         display: inline-block;
-        max-width: 300px;
+        width: 300px;
         height: 1px;
         margin: 5px 15px;
         background-color: transparentize($clr3, 0.7);
         }
     }
 
+    p {
+        margin-top: 50px;
+    }
+
     img {
         max-width: 300px;
+    }
+
+    @include for-normal-layout;
+
+    .card {
+        position: relative;
+        left: 70%;
+        padding: 15px;
     }
 
     
