--- a/src/styles/cmps/_mail.scss
+++ b/src/styles/cmps/_mail.scss
@@ -6,7 +6,8 @@
     right: 40px;
     display: flex;
     flex-direction: column;
-
+    z-index: 15;
+    
     div {
         margin: 0;
         display: flex;
