--- a/src/styles/cmps/_social.scss
+++ b/src/styles/cmps/_social.scss
@@ -6,7 +6,7 @@
     left: 40px;
     display: flex;
     flex-direction: column;
-
+    z-index: 15;
     i {
         margin: 10px auto;
         cursor: pointer;
