--- a/src/styles/cmps/_mail.scss
+++ b/src/styles/cmps/_mail.scss
@@ -29,4 +29,8 @@
         margin: auto auto 0;
         background-color: $clr2;
     }
+
+    @include for-narrow-layout {
+        display: none;
+    }
 }
