--- a/src/styles/cmps/_navbar.scss
+++ b/src/styles/cmps/_navbar.scss
@@ -1,28 +1,138 @@
 .navbar {
-    background-color: $clr1;
+  background-color: $clr1;
+  display: flex;
+  width: 100%;
+  height: 100px;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 40px;
+  position: fixed;
+  top: 0;
+  z-index: 10;
+
+  .logo {
+    width: 50px;
+    margin: 0;
+  }
+
+  .navbar-num {
+    color: $clr3;
+  }
+
+  .navbar-content-box {
+    width: 600px;
     display: flex;
-    width: 100%;
-    height: 100px;
     justify-content: space-between;
-    align-items: center;
-    padding: 0 40px;
-    position: fixed;
-    top: 0;
-    z-index: 10;
+  }
 
-    .logo {
-        width: 50px;
-        margin: 0;
-    }
-
-    .navbar-num {
-        color: $clr3;
-    }
-
+  @include for-narrow-layout {
     .navbar-content-box {
-        
-        width: 600px;
-        display: flex;
-        justify-content: space-between;
+      flex-direction: column;
+      justify-content: space-around;
+      position: absolute;
+      height: 100vh;
+      top: 0;
+      right: 0;
+      width: 40%;
+      min-width: 200px;
+      background-color: darken($clr1, 3);
+      transition: all ease-in 0.4s;
+
+      
+
+      a {
+        margin: 0;
+      }
+
+      .resume-btn {
+        width: 70%;
+        max-width: 150px;
+        margin: 0 auto;
+      }
     }
+
+    .close {
+        transform: translateX(100%);
+    }
+
+    .hidden {
+        display: none;
+    }
+
+
+    .hamburger {
+        position: relative;
+
+      input {
+        display: block;
+        width: 32px;
+        height: 32px;
+        position: absolute;
+        top: 0;
+        margin: 0;
+        
+
+        cursor: pointer;
+
+        opacity: 0; /* hide this */
+        z-index: 2; /* and place it over the hamburger */
+
+        -webkit-touch-callout: none;
+      }
+
+      span {
+        display: block;
+        width: 33px;
+        height: 4px;
+        margin-bottom: 5px;
+        position: relative;
+
+        background: $clr4;
+        border-radius: 3px;
+
+        z-index: 1;
+
+        transform-origin: 4px 0px;
+
+        transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1),
+          background 0.5s cubic-bezier(0.77, 0.2, 0.05, 1), opacity 0.55s ease;
+      }
+
+      span:first-child {
+        transform-origin: 0% 0%;
+      }
+
+      span:nth-last-child(2) {
+        transform-origin: 0% 100%;
+      }
+
+      /* 
+ * Transform all the slices of hamburger
+ * into a crossmark.
+ */
+      input:checked ~ span {
+        opacity: 1;
+        transform: rotate(45deg) translate(2px, 0);
+        
+      }
+
+      /*
+ * But let's hide the middle one.
+ */
+      input:checked ~ span:nth-last-child(2) {
+        opacity: 0;
+        transform: rotate(0deg) scale(0.2, 0.2);
+      }
+
+      /*
+ * Ohyeah and the last one should go the other direction
+ */
+      input:checked ~ span:nth-last-child(1) {
+        transform: rotate(-45deg) translate(-2px, 0);
+      }
+
+      
+    }
+
+  }
 }
