--- a/src/styles/setup/_mixins.scss
+++ b/src/styles/setup/_mixins.scss
@@ -1,19 +1,19 @@
 /* Breakpoint mixins */
 
 @mixin for-mobile-layout {
-    @media (max-width: $mobile-breakpoint + 40) {
+    @media (max-width: $mobile-breakpoint) {
         @content;
     }
 }
 
 @mixin for-narrow-layout {
-    @media (min-width: $mobile-breakpoint + 40) {
+    @media (max-width: $normal-breakpoint) {
         @content;
     }
 }
 
 @mixin for-normal-layout {
-    @media (min-width: $narrow-breakpoint + 40) {
+    @media (min-width: $narrow-breakpoint) {
         @content;
     }
 }
