--- a/src/styles/cmps/_navbar.scss
+++ b/src/styles/cmps/_navbar.scss
@@ -2,7 +2,7 @@
   background-color: $clr1;
   display: flex;
   width: 100%;
-  height: 100px;
+  height: 90px;
   justify-content: space-between;
   align-items: center;
   padding: 0 40px;
@@ -26,6 +26,15 @@
   }
 
   @include for-narrow-layout {
+
+    background: none !important;
+    border: none !important;
+    direction: rtl;
+    
+    img {
+      display: none;
+    }
+
     .navbar-content-box {
       flex-direction: column;
       justify-content: space-around;
@@ -35,6 +44,8 @@
       right: 0;
       width: 40%;
       min-width: 200px;
+      padding-top: 80px;
+      direction: ltr;
       background-color: darken($clr1, 3);
       transition: all ease-in 0.4s;
 
@@ -62,77 +73,33 @@
 
     .hamburger {
         position: relative;
-
-      input {
-        display: block;
-        width: 32px;
-        height: 32px;
-        position: absolute;
-        top: 0;
-        margin: 0;
+        width: 35px;
+        height: 35px;
+        z-index: 9999;
         
-
-        cursor: pointer;
-
-        opacity: 0; /* hide this */
-        z-index: 2; /* and place it over the hamburger */
-
-        -webkit-touch-callout: none;
-      }
-
-      span {
-        display: block;
-        width: 33px;
-        height: 4px;
-        margin-bottom: 5px;
-        position: relative;
-
-        background: $clr4;
-        border-radius: 3px;
-
-        z-index: 1;
-
-        transform-origin: 4px 0px;
-
-        transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1),
-          background 0.5s cubic-bezier(0.77, 0.2, 0.05, 1), opacity 0.55s ease;
-      }
-
-      span:first-child {
-        transform-origin: 0% 0%;
-      }
-
-      span:nth-last-child(2) {
-        transform-origin: 0% 100%;
-      }
-
-      /* 
- * Transform all the slices of hamburger
- * into a crossmark.
- */
-      input:checked ~ span {
-        opacity: 1;
-        transform: rotate(45deg) translate(2px, 0);
         
-      }
-
-      /*
- * But let's hide the middle one.
- */
-      input:checked ~ span:nth-last-child(2) {
-        opacity: 0;
-        transform: rotate(0deg) scale(0.2, 0.2);
-      }
-
-      /*
- * Ohyeah and the last one should go the other direction
- */
-      input:checked ~ span:nth-last-child(1) {
-        transform: rotate(-45deg) translate(-2px, 0);
-      }
-
+        div {
+          width: 100%;
+          height: 5px;
+          background-color: $clr4;
+          margin: 6px 0;
+          transition: 0.4s;
+          border-radius: 2px;
+        }
+    }   
+         .change .bar1 {
+          -webkit-transform: rotate(-45deg) translate(-9px, 6px);
+          transform: rotate(-45deg) translate(-10px, 7px);
+        }
+        
+        .change .bar2 {opacity: 0;}
+        
+        .change .bar3 {
+          -webkit-transform: rotate(45deg) translate(-8px, -8px);
+          transform: rotate(45deg) translate(-8px, -6px);
+        }
       
-    }
+    
 
   }
 }
