--- a/src/styles/cmps/_skills.scss
+++ b/src/styles/cmps/_skills.scss
@@ -25,7 +25,7 @@
 
     .skill-groups {
         display: flex;
-        flex-wrap: wrap;
+        flex-direction: column;
         width: 100%;
         margin-top: 50px;
         justify-content: space-evenly;
@@ -37,22 +37,30 @@
                 width: 100%;
                 text-align: center;
             }
-            width: 20%;
-            min-width: 250px;
-            margin: 20px;
+            width: 100%;
+            margin-bottom: 50px;
             
             .skill-container {
+                min-height: 120px;
                 display: flex;
+                align-items: center;
+                justify-content: center;
                 flex-wrap: wrap;
-                background-color: transparentize($clr2 , 0.6);
                 border-radius: 3px;
 
                 p {
                     padding: 10px;
                     color: $clr3;
+                    margin: 0;
                 }
             }
             
         }
     }
+
+    @include for-narrow-layout {
+        padding: 100px 50px;
+        margin: 0;
+        text-align: center;
+      }
 }
