--- a/src/styles/basics/_buttons.scss
+++ b/src/styles/basics/_buttons.scss
@@ -39,3 +39,14 @@
 
 }
  
+.mainframe-btn {
+    font-family: lcd;
+    background: none;
+    border: none;
+    z-index: 9999;
+    color: aquamarine;
+    font-size: rem(28px);
+    position: absolute;
+    outline: none;
+    cursor: pointer;
+}
