--- a/src/styles/cmps/_landing.scss
+++ b/src/styles/cmps/_landing.scss
@@ -1,24 +1,88 @@
+
+
 .landing {
+    position: absolute;
+    left: 100vw;
+    top: 100vh;
+    width: 100vw;
+    height: 100vh;
+    overflow: hidden;
+    z-index: 15;
+    background-size: cover;
+    background-position: center center;
+    background-repeat: no-repeat;
 
-    width: 100%;
-    padding: 150px 100px 0 100px ;
-    text-align: inline-start;
 
-    .opening {
-        color: $clr3;
+    .content {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+        height: 100%;
+        color: #7897fb;
+        position: absolute;
+
+        .row {
+            display: flex;
+
+            p {
+                padding: 0 4px;
+            }
+        }
+        
     }
-    .name {
-        color: $clr4;
-        font-size: 65px;
-    }
-    h1 {
-        font-size: 60px;
-    }
-    .sentence {
-        padding: 50px 0;
-    }
+    // text-align: inline-start;
+
+    // .opening {
+    //     color: $clr3;
+    // }
+    // .name {
+    //     color: $clr4;
+    //     font-size: 65px;
+    // }
+    // h1 {
+    //     font-size: 60px;
+    // }
+    // .sentence {
+    //     padding: 50px 0;
+    // }
+
+//     .card1,
+// .card2,
+// .card3,
+// .card4 {
+//   position: absolute;
+  
+//   background-position: center center;
+//   background-repeat: no-repeat;
+//   will-change: transform;
+// }
+
+    
+
+//     .card2 {
+//     background-size: contain;
+//     width: 100%;
+//     height: 100%;
+//     background: url(../../assets/1st/stars.svg) no-repeat center center;
+//     }  
+
+//     .card3 {
+//         width: 100%;
+//       height: 100%;
+//         background-size: contain;
+//     background: url(../../assets/1st/man.svg) no-repeat top left;
+//     }
+
+    // .card4 {
+    //     width: 100%;
+    //     height: 100%;
+    //       background-size: contain;
+    //   background: url(../../assets/1st/moon.svg) no-repeat top left;
+    // }
 
     @include for-narrow-layout {
-        padding:50px;
+        
       }
 }
