--- a/src/styles/cmps/_about.scss
+++ b/src/styles/cmps/_about.scss
@@ -1,11 +1,12 @@
 .about {
     
     
-    margin-top: 25vh;
-    width: 100%;
-    padding: 150px 100px 0 100px ;
+    position: absolute;
+    top: 100vh;
+    width: 100vw;
+    height: 100vh;
     text-align: inline-start;
-    position: relative;
+    
 
     span {
         font-family: roboto-mono;
