--- a/src/styles/cmps/_contact.scss
+++ b/src/styles/cmps/_contact.scss
@@ -1,9 +1,8 @@
 .contact {
-    width: 100%;
-    padding: 150px 100px 100px 100px;
-    text-align: inline-start;
-    position: relative;
-    margin-top: 25vh;
+  position: absolute;
+  top: 200vh;
+  left: 100vw;
+  width: 100vw;
   
     span {
       font-family: roboto-mono;
