--- a/src/styles/cmps/_skills.scss
+++ b/src/styles/cmps/_skills.scss
@@ -1,10 +1,13 @@
 .skills {
     
-    width: 100%;
-    padding: 150px 100px 0 100px ;
-    text-align: inline-start;
-    position: relative;
-    margin-top: 25vh;
+    position: absolute;
+    top: 0;
+    left: 100vw;
+    width: 100vw;
+
+
+    
+
 
     span {
         font-family: roboto-mono;
@@ -18,7 +21,7 @@
         display: inline-block;
         width: 300px;
         height: 1px;
-        margin: 5px 15px;
+        
         background-color: transparentize($clr3, 0.7);
         }
     }
@@ -27,7 +30,7 @@
         display: flex;
         flex-direction: column;
         width: 100%;
-        margin-top: 50px;
+        
         justify-content: space-evenly;
 
         .skill-group {
@@ -38,7 +41,7 @@
                 text-align: center;
             }
             width: 100%;
-            margin-bottom: 50px;
+            
             
             .skill-container {
                 min-height: 120px;
