--- a/src/styles/setup/_typography.scss
+++ b/src/styles/setup/_typography.scss
@@ -10,3 +10,7 @@
     font-family: roboto-mono;
     src: url(../../assets/fonts/RobotoMono-Regular.ttf);
 }
+@font-face {
+    font-family: lcd;
+    src: url(../../assets/fonts/LcdSolid-VPzB.ttf);
+}
