space protfoilo initialized

--- a/src/styles/basics/_buttons.scss
+++ b/src/styles/basics/_buttons.scss
@@ -44,9 +44,10 @@
     background: none;
     border: none;
     z-index: 9999;
-    color: aquamarine;
-    font-size: rem(28px);
+    color: #B3C0C9;
+    font-size: rem(22px);
     position: absolute;
     outline: none;
     cursor: pointer;
+    
 }
