--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -24,6 +24,8 @@
 @import "cmps/work";
 @import "cmps/contact";
 @import "cmps/footer";
+@import "cmps/space-bg";
+
 
 // Pages
 @import "pages/home";
