--- a/src/styles/pages/_home.scss
+++ b/src/styles/pages/_home.scss
@@ -1,51 +1,59 @@
-body {
+.home-page {
     font-family: noto-reg;
     width: 300vw;
     height: 300vh;
-    background-color: #0b022c;
+    background-color: #ffff;
     z-index: 0;
+    background: var(--dark-cosmos-color);
+    color: var(--dark-cosmos-color);
+    
+    // .bg-circuit-animation {
+        
+    //         opacity: 0.3;
+    //         z-index: 1;
+    //         position: absolute;
+    //         top: 170vh;
+    //         left: 150vw;
+            
+    //         transform: translate(-50%, -50%);
+            
+        
+    //       .path {
+    //         animation: draw 20s infinite;
+    //         animation-timing-function: linear;
+    //       }
+    //       .path-01 {
+    //         animation-delay: 0s;
+    //       }
+    //       .path-02 {
+    //         animation-delay: 1s;
+    //       }
+    //       .path-03 {
+    //         animation-delay: 2s;
+    //       }
+    //       .path-04 {
+    //         animation-delay: 3s;
+    //       }
+    //       .path-05 {
+    //         animation-delay: 4s;
+    //       }
+          
+          
+          
+    //       @keyframes draw {
+    //         0% {
+    //         }
+    //         100% {
+    //           stroke-dashoffset: 0;
+    //           stroke-opacity: 1;
+    //         }
+    //       }
+    // }
 
-    .bg-circuit-animation {
-        
-            opacity: 0.15;
-            z-index: 1;
-            position: absolute;
-            top: 170vh;
-            left: 150vw;
-            
-            transform: translate(-50%, -50%);
-            
-        
-          .path {
-            animation: draw 20s infinite;
-            animation-timing-function: linear;
-          }
-          .path-01 {
-            animation-delay: 0s;
-          }
-          .path-02 {
-            animation-delay: 1s;
-          }
-          .path-03 {
-            animation-delay: 2s;
-          }
-          .path-04 {
-            animation-delay: 3s;
-          }
-          .path-05 {
-            animation-delay: 4s;
-          }
-          
-          
-          
-          @keyframes draw {
-            0% {
-            }
-            100% {
-              stroke-dashoffset: 0;
-              stroke-opacity: 1;
-            }
-          }
+    .space-ship {
+      position: relative;
+      top: 40%;
+      left: 30%;
     }
 }
 
