--- a/src/styles/cmps/_about.scss
+++ b/src/styles/cmps/_about.scss
@@ -5,7 +5,13 @@
     top: 100vh;
     width: 100vw;
     height: 100vh;
-    text-align: inline-start;
+    z-index: 10;
+
+    svg {
+        
+        width: 100%;
+        height: 100%;
+      }
     
 
     span {
@@ -20,18 +26,15 @@
         display: inline-block;
         width: 300px;
         height: 1px;
-        margin: 5px 15px;
+        
         background-color: transparentize($clr3, 0.7);
         }
     }
 
     p {
-        margin-top: 50px;
+       
     }
 
-    img {
-        max-width: 300px;
-    }
 
     
     .card {
@@ -42,12 +45,12 @@
     }
 
     @include for-narrow-layout {
-        padding: 100px 50px;
+        
         margin: 0;
         text-align: center;
         .card {
             position: static;
-            margin: 50px auto;
+            
         }
 
         p {
