--- a/src/styles/cmps/_landing.scss
+++ b/src/styles/cmps/_landing.scss
@@ -1,88 +1,116 @@
-
-
 .landing {
+  position: absolute;
+  left: 100vw;
+  top: 100vh;
+  width: 100vw;
+  height: 100vh;
+  overflow: hidden;
+  z-index: 15;
+  background-size: cover;
+  background-position: center center;
+  background-repeat: no-repeat;
+
+  .content {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    color: #7897fb;
     position: absolute;
-    left: 100vw;
-    top: 100vh;
-    width: 100vw;
-    height: 100vh;
-    overflow: hidden;
-    z-index: 15;
-    background-size: cover;
-    background-position: center center;
-    background-repeat: no-repeat;
 
+    .row {
+      display: flex;
 
-    .content {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        width: 100%;
-        height: 100%;
-        color: #7897fb;
-        position: absolute;
-
-        .row {
-            display: flex;
-
-            p {
-                padding: 0 4px;
-            }
-        }
-        
-    }
-    // text-align: inline-start;
-
-    // .opening {
-    //     color: $clr3;
-    // }
-    // .name {
-    //     color: $clr4;
-    //     font-size: 65px;
-    // }
-    // h1 {
-    //     font-size: 60px;
-    // }
-    // .sentence {
-    //     padding: 50px 0;
-    // }
-
-//     .card1,
-// .card2,
-// .card3,
-// .card4 {
-//   position: absolute;
-  
-//   background-position: center center;
-//   background-repeat: no-repeat;
-//   will-change: transform;
-// }
-
-    
-
-//     .card2 {
-//     background-size: contain;
-//     width: 100%;
-//     height: 100%;
-//     background: url(../../assets/1st/stars.svg) no-repeat center center;
-//     }  
-
-//     .card3 {
-//         width: 100%;
-//       height: 100%;
-//         background-size: contain;
-//     background: url(../../assets/1st/man.svg) no-repeat top left;
-//     }
-
-    // .card4 {
-    //     width: 100%;
-    //     height: 100%;
-    //       background-size: contain;
-    //   background: url(../../assets/1st/moon.svg) no-repeat top left;
-    // }
-
-    @include for-narrow-layout {
-        
+      p {
+        padding: 0 4px;
       }
+    }
+   }
+    .animations {
+      width: 100%;
+      height: 100%;
+      
+      .stars {
+       width: 100%;
+      
+        position: absolute;
+        top: 0;
+        
+        .star {
+          position: absolute;
+          width: 100%;
+          top: 0;
+        }
+
+        .group {
+          position: absolute;
+          width: 100%;
+          top: 0;
+        }
+        #star {
+          fill: #fff
+        }
+      }
+
+    }
+  
+
+  // svg {
+    
+  //   width: 100%;
+  //   height: 100%;
+  //   transition: stroke ease-in .4s ;
+  // }
+  // text-align: inline-start;
+
+  // .opening {
+  //     color: $clr3;
+  // }
+  // .name {
+  //     color: $clr4;
+  //     font-size: 65px;
+  // }
+  // h1 {
+  //     font-size: 60px;
+  // }
+  // .sentence {
+  //     padding: 50px 0;
+  // }
+
+  //     .card1,
+  // .card2,
+  // .card3,
+  // .card4 {
+  //   position: absolute;
+
+  //   background-position: center center;
+  //   background-repeat: no-repeat;
+  //   will-change: transform;
+  // }
+
+  //     .card2 {
+  //     background-size: contain;
+  //     width: 100%;
+  //     height: 100%;
+  //     background: url(../../assets/1st/stars.svg) no-repeat center center;
+  //     }
+
+  //     .card3 {
+  //         width: 100%;
+  //       height: 100%;
+  //         background-size: contain;
+  //     background: url(../../assets/1st/man.svg) no-repeat top left;
+  //     }
+
+  // .card4 {
+  //     width: 100%;
+  //     height: 100%;
+  //       background-size: contain;
+  //   background: url(../../assets/1st/moon.svg) no-repeat top left;
+  // }
+
+  @include for-narrow-layout {
+  }
 }
