about base ready

--- a/src/styles/basics/_buttons.scss
+++ b/src/styles/basics/_buttons.scss
@@ -51,3 +51,15 @@
     cursor: pointer;
     
 }
+
+.center-btn {
+    font-family: lcd;
+    background: none;
+    border: none;
+    z-index: 9999;
+    color: #B3C0C9;
+    font-size: rem(22px);
+    position: absolute;
+    outline: none;
+    cursor: pointer;
+}
