--- a/src/styles/cmps/_about.scss
+++ b/src/styles/cmps/_about.scss
@@ -1,62 +1,69 @@
 .about {
     
-    
+    display: flex;
+    flex-direction: column;
     position: absolute;
     top: 100vh;
     width: 100vw;
     height: 100vh;
     z-index: 10;
 
-    svg {
-        
-        width: 100%;
-        height: 100%;
-      }
     
+    
+
+    
+
+    .img-container {
+        max-width: 250px;
+        z-index: 10;
+        margin: 10px;
+
+        img {
+        border-radius: 10px;
+        max-width: 250px;
+        }
+
+        .animated-img {
+            position:relative;
+            opacity: 1;
+            transition: opacity ease-in .3s;
+        }
+        .animated-img:hover {
+            opacity: 0;
+        }
+
+        .real-img {
+            position: absolute;
+            
+        }
+    }
+
+    .content {
+        width: 66%;
+        color: #fff;
+        font-size: rem(16px);
+        text-align: center;
+    }
+
 
     span {
         font-family: roboto-mono;
     }
 
-    h3 {
+    
 
-
-        &::after {
-        content: "";
-        display: inline-block;
-        width: 300px;
-        height: 1px;
-        
-        background-color: transparentize($clr3, 0.7);
-        }
-    }
-
-    p {
-       
+    button {
+        position: absolute;
+        top: 50%;
+        right: 10%;
     }
 
 
     
-    .card {
-        position: absolute;
-        top: 200px;
-        right: 140px;
-        width: 350px;
-    }
-
+    
     @include for-narrow-layout {
         
-        margin: 0;
-        text-align: center;
-        .card {
-            position: static;
-            
-        }
-
-        p {
-            max-width: 100%;
-        }
+        
     }
-
     
 }
