--- a/src/styles/cmps/_contact.scss
+++ b/src/styles/cmps/_contact.scss
@@ -1,41 +1,52 @@
 .contact {
-  position: absolute;
-  top: 200vh;
+  position: relative;
+  top: -100vh;
   left: 100vw;
   width: 100vw;
+  height: 100vh;
+
+
+
+  .astroid {
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        top: 0;
+        z-index: 20;
+        svg {
+            width: 30%;
+            position: absolute;
+            bottom: 0;
+        }
+    }
   
     span {
       font-family: roboto-mono;
     }
   
-    h3 {
-      &::after {
-        content: '';
-        display: inline-block;
-        width: 300px;
-        height: 1px;
-        margin: 5px 15px;
-        background-color: transparentize($clr3, 0.7);
-      }
-    }
+    // h3 {
+    //   &::after {
+    //     content: '';
+    //     display: inline-block;
+    //     width: 300px;
+    //     height: 1px;
+    //     margin: 5px 15px;
+    //     background-color: transparentize($clr3, 0.7);
+    //   }
+    // }
     .contact-content {
-
+      position: absolute;
         text-align: center;
-        p {
-            margin: 0;
-            margin-top: 50px;
-            width: 100%;
-            max-width: 100%
-        }
+        
         button {
             margin: 50px auto;
         }
     }
 
     @include for-narrow-layout {
-      padding: 100px 50px;
-      text-align: center;
-      margin: 0;
+      // padding: 100px 50px;
+      // text-align: center;
+      // margin: 0;
     }
     
 }
