--- a/src/styles/cmps/_skills.scss
+++ b/src/styles/cmps/_skills.scss
@@ -4,7 +4,14 @@
     top: 0;
     left: 100vw;
     width: 100vw;
+    height: 100vh;
+    color: #fff;
 
+ button {
+        position: absolute;
+        left: 38%;
+        bottom: 5%;
+    }
 
     
 
@@ -13,25 +20,13 @@
         font-family: roboto-mono;
     }
 
-    h3 {
-
-
-        &::after {
-        content: "";
-        display: inline-block;
-        width: 300px;
-        height: 1px;
-        
-        background-color: transparentize($clr3, 0.7);
-        }
-    }
 
     .skill-groups {
         display: flex;
-        flex-direction: column;
+        justify-content: space-around;
         width: 100%;
+        height: 60%;
         
-        justify-content: space-evenly;
 
         .skill-group {
             
@@ -44,16 +39,16 @@
             
             
             .skill-container {
-                min-height: 120px;
+               text-align: center;
+               width:100%;
+               height: 100%;
                 display: flex;
-                align-items: center;
-                justify-content: center;
-                flex-wrap: wrap;
-                border-radius: 3px;
+                flex-direction: column;
+                justify-content: space-around;
 
                 p {
                     padding: 10px;
-                    color: $clr3;
+                    color: #fff;
                     margin: 0;
                 }
             }
