--- a/src/styles/cmps/_space-bg.scss
+++ b/src/styles/cmps/_space-bg.scss
@@ -1,7 +1,7 @@
 
 :root {
     /* Fixed colors that don't get transition/animation */
-    --dark-cosmos-color: hsl(290, 34%, 10%);
+    --dark-cosmos-color: rgb(31, 17, 34);
     --star-color: hsl(272, 57%, 95%);
     --star-color-transparency: hsla(272, 57%, 95%, 0.5);
     --t-sun-color: hsl(47, 100%, 88%);
