--- a/src/styles/cmps/_skills.scss
+++ b/src/styles/cmps/_skills.scss
@@ -7,7 +7,7 @@
     height: 100vh;
     color: #fff;
 
- button {
+ .center-btn {
         position: absolute;
         left: 38%;
         bottom: 5%;
@@ -21,44 +21,44 @@
     }
 
 
-    .skill-groups {
-        display: flex;
-        justify-content: space-around;
-        width: 100%;
-        height: 60%;
+    // .skill-groups {
+    //     display: flex;
+    //     justify-content: space-around;
+    //     width: 100%;
+    //     height: 60%;
         
 
-        .skill-group {
+    //     .skill-group {
             
-            h2 {
-                color: $clr4;
-                width: 100%;
-                text-align: center;
-            }
-            width: 100%;
+    //         h2 {
+    //             color: $clr4;
+    //             width: 100%;
+    //             text-align: center;
+    //         }
+    //         width: 100%;
             
             
-            .skill-container {
-               text-align: center;
-               width:100%;
-               height: 100%;
-                display: flex;
-                flex-direction: column;
-                justify-content: space-around;
+    //         .skill-container {
+    //            text-align: center;
+    //            width:100%;
+    //            height: 100%;
+    //             display: flex;
+    //             flex-direction: column;
+    //             justify-content: space-around;
 
-                p {
-                    padding: 10px;
-                    color: #fff;
-                    margin: 0;
-                }
-            }
+    //             p {
+    //                 padding: 10px;
+    //                 color: #fff;
+    //                 margin: 0;
+    //             }
+    //         }
             
-        }
-    }
+    //     }
+    // }
 
-    @include for-narrow-layout {
-        padding: 100px 50px;
-        margin: 0;
-        text-align: center;
-      }
+    // @include for-narrow-layout {
+    //     padding: 100px 50px;
+    //     margin: 0;
+    //     text-align: center;
+    //   }
 }
