--- a/src/styles/setup/_variables.scss
+++ b/src/styles/setup/_variables.scss
@@ -1,8 +1,14 @@
 // Colors
-$clr1: rgb(11, 26, 49);
-$clr2: rgb(136, 146, 176);
-$clr3: rgb(100, 255, 218);
-$clr4: rgb(204, 214, 246);
+//Main
+$main: rgb(99, 13, 156);
+// Light
+$light-bg: #fff;
+$light-font: #222;
+
+// Dark
+$dark-bg: rgb(31, 17, 34);
+$dark-font: #fff;
+
 
 
 // Breakpoints
