--- a/src/styles/cmps/_image.scss
+++ b/src/styles/cmps/_image.scss
@@ -1,18 +1,10 @@
-.card {
-    max-width: 200px;
-    height: 300px;
-    border-radius: 5px;
-    background-image: url(../../assets/images/formalImage.jpg);
-    background-size: cover;
-    background-position: center center;
-    box-shadow: 0px 10px 30px -5px rgba(0, 0, 0, 0.3);
-    transition: box-shadow 0.5s;
-    will-change: transform;
-    border: 0.5px solid $clr3;
+// .card {
+//    max-width: 400px;
+//    cursor: pointer;
     
-  }
+//   }
   
-  .card:hover {
-    box-shadow: 0px 30px 100px -10px rgba(0, 0, 0, 0.4);
-  }
+//   .card:hover {
+//     box-shadow: 0px 30px 100px -10px rgba(0, 0, 0, 0.4);
+//   }
 
