--- a/src/styles/cmps/_landing.scss
+++ b/src/styles/cmps/_landing.scss
@@ -10,15 +10,111 @@
   background-position: center center;
   background-repeat: no-repeat;
 
+  display: grid;
+    grid-template-columns: 1fr 2fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
+    gap: 0px 0px;
+    grid-template-areas:
+      'options top .'
+      'left content right'
+      '. bottom .';
+
+  
+
+    .left {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      grid-area: left;
+     
+      svg {
+        transform: rotate(90deg);
+      }
+     
+    }
+
+    .left:hover {
+
+      svg {
+        animation: left 2s ease-in-out infinite;
+
+      }
+    }
+    .right {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      grid-area: right;
+
+      svg {
+        transform: rotate(-90deg);
+      }
+    }
+
+    .right:hover {
+
+      svg {
+        animation: right 2s ease-in-out infinite;
+
+      }
+    }
+    .top {
+      display: flex;
+      flex-direction: column;
+      
+      justify-content: center;
+      grid-area: top;
+      z-index: 5;
+
+      svg {
+        transform: rotate(180deg) translateY(20px);
+        margin: 0 auto;
+      }
+      button {
+        margin: 0 auto;
+      }
+    }
+
+    .top:hover {
+
+      svg {
+        animation: top 2s ease-in-out infinite;
+
+      }
+    }
+    .bottom {
+      display: flex;
+      flex-direction: column;
+     
+      justify-content: center;
+      grid-area: bottom;
+      z-index: 15;
+      svg {
+        transform:  translateY(20px);
+        margin: 0 auto;
+      }
+      button {
+        margin: 0 auto;
+      }
+    }
+
+    .bottom:hover {
+
+      svg {
+        animation: bottom 2s ease-in-out infinite;
+
+      }
+    }
+  
+
   .content {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 100%;
-    height: 100%;
-    color: #7897fb;
-    position: absolute;
+    grid-area: content;
+    font-family: imb-reg;
+    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
 
     .row {
       display: flex;
@@ -27,38 +123,55 @@
         padding: 0 4px;
       }
     }
+   .name {
+     font-family: clean;
+     font-size: rem(24px);
+     padding: 10px;
    }
-    .animations {
+   .sentence {
+     font-family: clean;
+     font-size: rem(24px);
+   }
+   span {
+     width: 100%;
+     z-index: 15;
+     color: $main;
+     font-size: rem(26px);
+     margin: 0 3px;
+   }
+   h2 {
+     font-size: rem(26px);
+   }
+  }
+  .animations {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    .stars {
       width: 100%;
-      height: 100%;
-      
-      .stars {
-       width: 100%;
-      
-        position: absolute;
-        top: 0;
-        
-        .star {
-          position: absolute;
-          width: 100%;
-          top: 0;
-        }
 
-        .group {
-          position: absolute;
-          width: 100%;
-          top: 0;
-        }
-        #star {
-          fill: #fff
-        }
+      position: absolute;
+      top: 0;
+
+      .star {
+        position: absolute;
+        width: 100%;
+        top: 0;
       }
 
+      .group {
+        position: absolute;
+        width: 100%;
+        top: 0;
+      }
+      #star {
+        fill: #fff;
+      }
     }
-  
+  }
 
   // svg {
-    
+
   //   width: 100%;
   //   height: 100%;
   //   transition: stroke ease-in .4s ;
@@ -112,5 +225,91 @@
   // }
 
   @include for-narrow-layout {
+    position: inherit;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 0;
+
+    .content {
+      width: 80%;
+      height: 40%;
+    
+    }
+
+    
+    .left,.top,.right,.bottom {
+      display: none;
+    }
+  }
+  @media (max-width: 475px) {
+    .content {
+      .name {
+        font-size: rem(18px);
+        span {
+          font-size: rem(22px);
+        }
+      }
+      .sentence {
+        font-size: rem(18px);
+      }
+
+      span {
+        .toggle-btn {
+          div {
+            h4 {
+              font-size: rem(16px);
+            }
+          }
+        }
+      }
+    }
+  }
+}
+
+
+
+@keyframes left {
+  0% {
+    transform: rotate(90deg) translateY(0px);
+  }
+  50% {
+    transform:  rotate(90deg) translateY(30px);
+  }
+  100% {
+    transform: rotate(90deg) translateY(0px);
+  }
+}
+@keyframes right {
+  0% {
+    transform: rotate(-90deg) translateY(0px);
+  }
+  50% {
+    transform:  rotate(-90deg) translateY(30px);
+  }
+  100% {
+    transform: rotate(-90deg) translateY(0px);
+  }
+}
+@keyframes top {
+  0% {
+    transform: rotate(180deg) translateY(20px);
+  }
+  50% {
+    transform:   rotate(180deg) translateY(50px);
+  }
+  100% {
+    transform:  rotate(180deg) translateY(20px);
+  }
+}
+@keyframes bottom {
+  0% {
+    transform:  translateY(20px);
+  }
+  50% {
+    transform:   translateY(50px);
+  }
+  100% {
+    transform:  translateY(20px);
   }
 }
