--- a/src/styles/cmps/_social.scss
+++ b/src/styles/cmps/_social.scss
@@ -1,36 +1,38 @@
 .social {
-    width: 40px;
-    height: 200px;
+    width: 15%;
+    height: 10%;
     position: fixed;
     bottom: 0;
-    left: 40px;
+    left: 0;
     display: flex;
-    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+    font-size: rem(24px);
     z-index: 15;
     i {
-        margin: 10px auto;
-        cursor: pointer;
-        transition: all ease-out .3s;
-        &:hover {
-            transform: translateY(-5px);
-            color: $clr3;
-        }
+        
     }
 
     a {
-        color: $clr2;
     }
 
-    &::after {
-        content: "";
-        width: 1px;
-        height: 100px;
-        margin: auto auto 0;
-        background-color: $clr2;
-    }
+    
 
     @include for-narrow-layout {
-        display: none;
+        bottom: 10px;
+        height: 15%;
+        width: 10%;
+        flex-direction: column;
+        a {
+            font-size: rem(32px);
+        }
+
+    }
+    @media (max-width: 650px) {
+
+        a {
+            font-size: rem(20px);
+        }
     }
 
 }
