--- a/src/styles/pages/_home.scss
+++ b/src/styles/pages/_home.scss
@@ -2,10 +2,20 @@
     font-family: noto-reg;
     width: 300vw;
     height: 300vh;
-    background-color: #ffff;
+    
     z-index: 0;
-    background: var(--dark-cosmos-color);
-    color: var(--dark-cosmos-color);
+    transition: all ease-in-out .6s;
+
+ 
+
+    &.light {
+      background-color: $light-bg;
+      color: $light-font;
+    }
+    &.dark {
+      background-color: $dark-bg;
+      color: $dark-font
+    }
     
     // .bg-circuit-animation {
         
@@ -54,6 +64,17 @@
       position: relative;
       top: 40%;
       left: 30%;
+    }
+
+    @include for-narrow-layout {
+      
+      width: 100%;
+      height: 500vh;
+      display: flex;
+      flex-direction: column;
+
+
+
     }
 }
 
